--- a/pets/package.json
+++ b/pets/package.json
@@ -5,7 +5,10 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "azure-storage": "^2.6.0",
     "babel-runtime": "^6.20.0",
-    "meteor-node-stubs": "~0.2.4"
+    "documentdb": "^1.13.0",
+    "meteor-node-stubs": "~0.2.4",
+    "mongodb": "^2.2.33"
   }
 }
