--- a/pets/package.json
+++ b/pets/package.json
@@ -7,8 +7,20 @@
   "dependencies": {
     "azure-storage": "^2.6.0",
     "babel-runtime": "^6.20.0",
+    "bootstrap": "^3.3.7",
     "documentdb": "^1.13.0",
+    "memorystream": "^0.3.1",
     "meteor-node-stubs": "~0.2.4",
-    "mongodb": "^2.2.33"
+    "mongo": "^0.1.0",
+    "mongodb": "^2.2.33",
+    "multer-azure-storage": "^0.1.2",
+    "multiparty": "^4.1.3",
+    "stream-buffer": "^1.0.0",
+    "stream-buffers": "^3.0.1",
+    "stream-length": "^1.0.2",
+    "streambuffers": "^1.0.0"
+  },
+  "devDependencies": {
+    "exports-loader": "^0.6.3"
   }
 }
